Worked through cleaning and dates

--- a/new_pages/dates.qmd
+++ b/new_pages/dates.qmd
@@ -426,9 +426,9 @@ example_date + weeks(7) - days(2)
 
 The difference between dates can be calculated by:  
 
-1. Ensure both dates are of class date  
-2. Use subtraction to return the "difftime" difference between the two dates  
-3. If necessary, convert the result to numeric class to perform subsequent mathematical calculations  
+1. Ensure both dates are of class date.  
+2. Use subtraction to return the "difftime" difference between the two dates.  
+3. If necessary, convert the result to numeric class to perform subsequent mathematical calculations.  
 
 Below the interval between two dates is calculated and displayed. You can find intervals by using the subtraction "minus" symbol on values that are class Date. Note, however that the class of the returned value is "difftime" as displayed below, and must be converted to numeric. 
 
@@ -615,7 +615,7 @@ In R, each *datetime* object has a timezone component. By default, all datetime 
 
 To deal with time zones, there are a number of helper functions in lubridate that can be used to change the time zone of a datetime object from the local time zone to a different time zone. Time zones are set by attributing a valid tz database time zone to the datetime object. A list of these can be found here - if the location you are using data from is not on this list, nearby large cities in the time zone are available and serve the same purpose. 
 
-https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+[https://en.wikipedia.org/wiki/List_of_tz_database_time_zones](https://en.wikipedia.org/wiki/List_of_tz_database_time_zones)
 
 
 ```{r}
@@ -665,13 +665,13 @@ Let's say you want to calculate the difference in cases between a current week a
 DT::datatable(counts, rownames = FALSE,  options = list(pageLength = 5, scrollX=T), class = 'white-space: nowrap' )
 ```
 
-**When using `lag()` or `lead()` the order of rows in the dataframe is very important! - pay attention to whether your dates/numbers are ascending or descending**  
+**When using `lag()` or `lead()` the order of rows in the dataframe is very important! - pay attention to whether your dates/numbers are ascending or descending**. 
 
 First, create a new column containing the value of the previous (lagged) week.  
 
-* Control the number of units back/forward with `n = ` (must be a non-negative integer)  
+* Control the number of units back/forward with `n = ` (must be a non-negative integer).  
 * Use `default = ` to define the value placed in non-existing rows (e.g. the first row for which there is no lagged value). By default this is `NA`.  
-* Use `order_by = TRUE` if your the rows are not ordered by your reference column  
+* Use `order_by = TRUE` if your the rows are not ordered by your reference column. 
 
 
 ```{r}
@@ -695,7 +695,7 @@ counts <- counts %>%
 DT::datatable(counts, rownames = FALSE,  options = list(pageLength = 5, scrollX=T), class = 'white-space: nowrap' )
 ```
 
-
+\n
 You can read more about `lead()` and `lag()` in the documentation [here](https://dplyr.tidyverse.org/reference/lead-lag.html) or by entering `?lag` in your console.  
 
 
@@ -705,5 +705,5 @@ You can read more about `lead()` and `lag()` in the documentation [here](https:/
 **lubridate** [tidyverse page](https://lubridate.tidyverse.org/)  
 **lubridate** RStudio [cheatsheet](https://rawgit.com/rstudio/cheatsheets/master/lubridate.pdf)  
 R for Data Science page on [dates and times](https://r4ds.had.co.nz/dates-and-times.html)  
-[Online tutorial](https://www.statmethods.net/input/dates.html)
+[Online tutorial](https://campus.datacamp.com/courses/intermediate-r/chapter-5-utilities?ex=12)
 [Date formats](https://www.r-bloggers.com/2013/08/date-formats-in-r/)
